@@ -1,5 +1,10 @@
 2010-07-07  Xavier Queralt Mateu  <xqueralt@flumotion.com>
 
+	* flumotion/test/test_component_httpstreamer.py:
+	Remove old test
+
+2010-07-07  Xavier Queralt Mateu  <xqueralt@flumotion.com>
+
 	reviewed by: Jan
 
 	* flumotion/common/common.py:
